--- a/navbar/Lectures.html
+++ b/navbar/Lectures.html
@@ -15,7 +15,7 @@
                  }
          </style>
 <table style="width: 100%" class="style_noborder ">
-	
+	https://github.com/kperkins411/PCSE_595.git
 	<tr>
 		<td class="style_emphasize " colspan="3"> 
 			<br><mark><b> <br><br>
@@ -32,11 +32,15 @@
 
 			<td class="style_white ">
 			<strong>Part1: Automate setup of a cloud based GPU instance</strong><br><br>
+			<strong>Before class</strong><br>
+			1. Sign up for a <a href="https://www.paperspace.com/">Paperspace</a> account.  The free account option is fine, but a Pro account ($8 USD/month) will give you more GPU options. You can cancel anytime. <br>
+			2. Sign up for a <a href="https://www.kaggle.com/">Kaggle</a> account. <br>
+
 			<br><strong>Slides and Videos</strong><br>
 				
  				<strong><a href="https://github.com/CNUClasses/CPSC327/blob/master/content/Lectures/Setting_up_cloud_machine.pdf"> 
 					INTRODUCTION:Setting up a cloud machine</a> Introduction</a></strong><br>
-				<strong><a href="">VIDEO: DETAILED MACHINE INSTANCE SETUP INSTRUCTIONS:Setting up a cloud machine</a></strong> VIDEO: Creating, customizing and automating setup of a paperspace gradient instance.  Watch this for how to do most of the project.</a></strong><br><br>
+				<strong><a href="">VIDEO: DETAILED CLOUD MACHINE INSTANCE SETUP INSTRUCTIONS</a></strong> Creating, customizing and automating setup of a paperspace gradient instance.  Watch this for how to do most of the project.</a></strong><br><br>
 
 				
 			<strong>References</strong><br>
@@ -59,11 +63,12 @@
 				<strong>Part 2: Effectively using a cloud based GPU instance for deep learning.  </strong><br>Specifically to enter a Kaggle competition<br>
 
 				<br><strong>Slides and Videos</strong><br>
-				<strong><a href="https://github.com/CNUClasses/CPSC327/blob/master/content/Lectures/DeepLearningComputerVisionIntro.pdf"> Deep Learning for Computer Vision</a> </a></strong><br>
-				<strong><a href="">VIDEO: EFFECTIVE USE</a></strong> Entering a Kaggle image recognition datascience competition.  Setting up Kaggle cli, getting data, training models, submitting results, monitoring memory...
+				<strong><a href="https://github.com/CNUClasses/CPSC327/blob/master/content/Lectures/DeepLearningComputerVisionIntro.pdf"> Deep Learning for Computer Vision Introduction</a> </a></strong><br>
+				<strong><a href="">VIDEO: EFFECTIVE CLOUD MACHINE INSTANCE USE</a></strong> Entering a Kaggle image recognition datascience competition.  Setting up Kaggle cli, getting data, training models, submitting results, monitoring memory...
 				Watch this for how to compete in a Kaggle datascience competition</a></strong><br><br>
 
 			<strong>References</strong><br>
+			<strong><a href="https://www.kaggle.com/competitions/paddy-disease-classification">Paddy Doctor: Paddy Disease Classification</a></strong>Kaggle competition: Identify the type of disease present in paddy leaf images<br> 
 			<strong><a href="https://www.kaggle.com/code/jhoward/the-best-vision-models-for-fine-tuning">The best vision models for fine-tuning</a></strong> How to choose a model? This notebook compares many different models.  All are fine-tuned on two differnt datasets;  
 				<a href="https://www.robots.ox.ac.uk/~vgg/data/pets/"> Oxford IIT-Pet</a> and then <a href="https://www.kaggle.com/c/planet-understanding-the-amazon-from-space/data">Kaggle planet (space images)</a>.<br>
 				<mark>Choose a model with a low error rate and fit time (trains faster) that's trained on data similar to yours.</mark><br>
