--- a/navbar/Lectures.html
+++ b/navbar/Lectures.html
@@ -38,7 +38,7 @@
 			<br><strong>Slides and Videos</strong><br>
 				
  				<strong><a href="https://github.com/CNUClasses/CPSC327/blob/master/content/Lectures/Setting_up_cloud_machine.pdf"> 
-					INTRODUCTION:Setting up a cloud machine</a> Introduction</a></strong><br>
+					INTRODUCTION: Setting up a cloud machine</a> </strong><br>
 				<strong><a href="">VIDEO: DETAILED CLOUD MACHINE INSTANCE SETUP INSTRUCTIONS</a></strong> Creating, customizing and automating setup of a paperspace gradient instance.  Watch this for how to do most of the project.</a></strong><br><br>
 
 				
@@ -62,7 +62,7 @@
 				<strong>Part 2: Effectively using a cloud based GPU instance for deep learning.  </strong><br>Specifically to enter a Kaggle competition<br>
 
 				<br><strong>Slides and Videos</strong><br>
-				<strong><a href="https://github.com/CNUClasses/CPSC327/blob/master/content/Lectures/DeepLearningComputerVisionIntro.pdf"> Deep Learning for Computer Vision Introduction</a> </a></strong><br>
+				<strong><a href="https://github.com/CNUClasses/CPSC327/blob/master/content/Lectures/DeepLearningComputerVisionIntro.pdf"> INTRODUCTION: Deep Learning for Computer Vision</a> </a></strong><br>
 				<strong><a href="">VIDEO: EFFECTIVE CLOUD MACHINE INSTANCE USE</a></strong> Entering a Kaggle image recognition datascience competition.  Setting up Kaggle cli, getting data, training models, submitting results, monitoring memory...
 				Watch this for how to compete in a Kaggle datascience competition</a></strong><br><br>
 
