--- a/navbar/Lectures.html
+++ b/navbar/Lectures.html
@@ -59,7 +59,7 @@
 		<tr>
 			<td class="style_white "><em>2</em></td>
 			<td class="style_white ">
-				<strong>Part 2: Effectively using a cloud based GPU instance for deep learning.  </strong><br>Specifically to enter a Kaggle competition<br>
+				<strong>Part 2: Effectively using a cloud based GPU instance for a Data Science competition.  </strong><br>Specifically to enter a Kaggle competition<br>
 
 				<br><strong>Slides and Videos</strong><br>
 				<strong><a href="https://github.com/CNUClasses/CPSC327/blob/master/content/Lectures/DeepLearningComputerVisionIntro.pdf"> INTRODUCTION: Deep Learning for Computer Vision</a> </a></strong><br>
