--- a/navbar/Lectures.html
+++ b/navbar/Lectures.html
@@ -48,8 +48,9 @@
 
 			<br><strong>Slides and Videos</strong><br>
 			            
- 				<strong><a href="https://github.com/kperkins411/PCSE_595/blob/main/content/Setting_up_cloud_machine.pdf"> 
-					INTRODUCTION: Setting up a cloud machine</a> </strong><br>
+ 		
+				<strong><a href="https://kperkins411.github.io/PCSE_595/content/Setting_up_cloud_machine.pdf"> 
+							INTRODUCTION: Setting up a cloud machine</a> </strong><br>
 				<strong><a href="">VIDEO: DETAILED CLOUD MACHINE INSTANCE SETUP WALKTHRU</a></strong> Creating, customizing and automating setup of a paperspace gradient instance.  Watch this for how to do most of the project.</a></strong><br><br>
 
 				
@@ -73,7 +74,7 @@
 				<strong>Part 2: Effectively using a cloud based GPU instance for a Data Science competition.  </strong><br>Specifically to enter a Kaggle competition<br>
 <!--
 				<br><strong>Slides and Videos</strong><br>
-				<strong><a href="https://github.com/kperkins411/PCSE_595/blob/main/blob/master/content/Lectures/DeepLearningComputerVisionIntro.pdf"> INTRODUCTION: Deep Learning for Computer Vision</a> </a></strong><br>
+				<strong><a href="https://kperkins411.github.io/PCSE_595/content/content/Lectures/DeepLearningComputerVisionIntro.pdf"> INTRODUCTION: Deep Learning for Computer Vision</a> </a></strong><br>
 				<strong><a href="">VIDEO: EFFECTIVE CLOUD MACHINE INSTANCE USE WALKTHRU</a></strong> Entering a Kaggle image recognition datascience competition.  Setting up Kaggle cli, getting data, training models, submitting results, monitoring memory...
 				Watch this for how to compete in a Kaggle datascience competition</a></strong><br><br>
 
