--- a/navbar/Lectures.html
+++ b/navbar/Lectures.html
@@ -41,26 +41,30 @@
 			<td class="style_white "><em>1</em></td>
 
 			<td class="style_white ">
-			<strong>Part1: Automate setup of a cloud based GPU instance</strong><br><br>
+			<strong>Part1: Automate setup of a cloud based GPU instance</strong><br>
+			Cloud based machines usually start with a default configuration which you have to customize to purpose every time you start the machine. 
+			This unit covers creating a startup script to do this automatically.<br>
+			To that end we will cover a good bit of linux, some ‘in the weeds’ python install details, a bit of bash shell scripting and using vim and ctags to browse code bases.  The lectures are practical in that I will walk thru this process explaining every step.<BR>
+			<br>
 			<strong>Before class</strong><br>
 			1. Sign up for a <a href="https://www.paperspace.com/">Paperspace</a> account.  The free account option is fine, but a Pro account ($8 USD/month) will give you more GPU options. You can cancel anytime. <br>
 			2. Sign up for a <a href="https://www.kaggle.com/">Kaggle</a> account. <br>
 
 			<br><strong>Slides and Videos</strong><br>
-			            
+			coming soon!          
  		
-				<strong><a href="https://kperkins411.github.io/PCSE_595/content/Setting_up_cloud_machine.pdf"> 
+				<!-- <strong><a href="https://kperkins411.github.io/PCSE_595/content/Setting_up_cloud_machine.pdf"> 
 							INTRODUCTION: Setting up a cloud machine</a> </strong><br>
-				<strong><a href="">VIDEO: DETAILED CLOUD MACHINE INSTANCE SETUP WALKTHRU</a></strong> Creating, customizing and automating setup of a paperspace gradient instance.  Watch this for how to do most of the project.</a></strong><br><br>
+				<strong><a href="">VIDEO: DETAILED CLOUD MACHINE INSTANCE SETUP WALKTHRU</a></strong> Creating, customizing and automating setup of a paperspace gradient instance.  Watch this for how to do most of the project.</a></strong><br> -->
 
-				
+			<br>	
 			<strong>References</strong><br>
 				<strong><a href="https://course.fast.ai/">Fastai-Practical Deep Learning for Coders</a></strong>The next 2 weeks content derives from fastai<br/>
 				<!-- <strong><a href="https://www.youtube.com/watch?v=V3cN-bqFUh4&list=PLfYUBJiXbdtSLBPJ1GMx-sQWf6iNhb8mM&index=6"> VIDEO: Fastai code walkthru for creating a paperspace gradient instance</a> -->
 
 				<strong><a href="https://www.paperspace.com/">Paperspace</a></strong> Fast, simple, scalable cloud computing for AI developers</strong><br/>
 				<strong><a href="https://linuxconfig.org/vim-tutorial">vim</a></strong> a powerful editor available on all unix installs</strong><br/>
-				<strong><a href="">vim cheatsheet</a></strong> annotated list of useful commands<br/>
+				<strong><a href="https://devhints.io/vim">vim cheatsheet</a></strong> list of useful commands<br/>
 				<strong><a href="https://github.com/universal-ctags/ctags">universal ctags</a></strong> ctags generates an index (or tag) file of language objects found in source files for programming languages. This index makes it easy for text editors and other tools to locate the indexed items.  See the 'How to build and install' section.</strong><br/>
 				<strong><a href="https://devhints.io/bash">bash scripting</a></strong> list of useful commands</strong><br/>
 				<strong><a href="http://www.ee.surrey.ac.uk/Teaching/Unix/">Linux tutorial</a></strong><br/>
