--- a/navbar/Projects.html
+++ b/navbar/Projects.html
@@ -29,9 +29,9 @@
       <td class="style_white "><em><strong>Description</strong></em></td>
   </tr>
   <td class="style_white "><em>0</em></td>
-    <td class="style_white ">7/28/23</td> 
+    <td class="style_white ">8/3/23</td> 
     <td class="style_white ">
- 
+    coming soon!
 <!-- 
         This project's purpose is to ensure you have access to a development environment. <br><b>You don't have to turn anything in, it's not graded.</b><BR><br>
         Either:
@@ -59,7 +59,7 @@
           <li>Start eclipse CDT and create a default "Hello world" C++ project.</li>
           <li>Set a breakpoint at the first cout and stop at that breakpoint during a Debug session</li>
         </ul>
-      Thats it, you are now ready for future assignments. --> -->
+      Thats it, you are now ready for future assignments. --> 
     </td>
  </tr>     
 
