--- a/navbar/Lectures.html
+++ b/navbar/Lectures.html
@@ -24,7 +24,7 @@
 					<li>Or drop me an email and we can set up a something that works for you</li>
 					<br>
 
-					<li>Class: TTh 8pm-9:30ish</li>
+					<li>Class: Suggested: TTh 8pm-9:15ish.  It will be recorded and posted.</li>
 					</li>
 				</ul>
 			</li> 
