--- a/navbar/Projects.html
+++ b/navbar/Projects.html
@@ -31,7 +31,11 @@
   <td class="style_white "><em>0</em></td>
     <td class="style_white ">8/3/23</td> 
     <td class="style_white ">
-    coming soon!
+      Note:  Please fork, then clone this project (should be the same process you used with CPSC 150/250).  I will pull your gitlab repos for evaluation.  Please demonstrate to me starting a new paperspace instance,  then sourcing your setup.sh script to configure it<br>
+
+      <strong><a href="https://student-gitlab.pcs.cnu.edu/pcse595-crn3135-s23/project4"> Project </a></strong><br>
+              
+      
 <!-- 
         This project's purpose is to ensure you have access to a development environment. <br><b>You don't have to turn anything in, it's not graded.</b><BR><br>
         Either:
