--- a/navbar/Lectures.html
+++ b/navbar/Lectures.html
@@ -56,9 +56,9 @@
 			<br><strong>Slides and Videos</strong><br>
 			coming soon!          
  		
-				<!-- <strong><a href="https://kperkins411.github.io/PCSE_595/content/Setting_up_cloud_machine.pdf"> 
+				 <strong><a href="https://kperkins411.github.io/PCSE_595/content/Setting_up_cloud_machine.pdf"> 
 							INTRODUCTION: Setting up a cloud machine</a> </strong><br>
-				<strong><a href="">VIDEO: DETAILED CLOUD MACHINE INSTANCE SETUP WALKTHRU</a></strong> Creating, customizing and automating setup of a paperspace gradient instance.  Watch this for how to do most of the project.</a></strong><br> -->
+				<!--<strong><a href="">VIDEO: DETAILED CLOUD MACHINE INSTANCE SETUP WALKTHRU</a></strong> Creating, customizing and automating setup of a paperspace gradient instance.  Watch this for how to do most of the project.</a></strong><br> -->
 
 			<br>	
 			<strong>References</strong><br>
