--- a/navbar/Lectures.html
+++ b/navbar/Lectures.html
@@ -20,10 +20,7 @@
 			<li>Office hours and class:
 				<ul>
 					<li>Conducted through  <a href="https://meet.google.com/mgu-bodg-xhd?pli=1&authuser=1">Google Meet </a></li>
-					<li>Office hours: TTh 7pm-8pm</li>
-					<li>Or drop me an email and we can set up a something that works for you</li>
-					<br>
-
+					<li>Office hours: TTh 7pm-8pm, Or drop me an email and we can set up a something that works for you</li>
 					<li>Class: Suggested: TTh 8pm-9:15ish.  It will be recorded and posted.</li>
 					</li>
 				</ul>
