--- a/navbar/Lectures.html
+++ b/navbar/Lectures.html
@@ -53,13 +53,13 @@
 			<br><strong>Slides and Videos</strong><br>          
  		
 				 <strong><a href="https://kperkins411.github.io/PCSE_595/content/Setting_up_cloud_machine.pdf"> 
-							INTRODUCTION: Setting up a cloud machine</a> </strong><br>
-				<!--<strong><a href="">VIDEO: DETAILED CLOUD MACHINE INSTANCE SETUP WALKTHRU</a></strong> Creating, customizing and automating setup of a paperspace gradient instance.  Watch this for how to do most of the project.</a></strong><br> -->
+							INTRODUCTION: Why use, and how to set up a cloud based machine</a> </strong><br>
+				<strong><a href="https://drive.google.com/file/d/1YMCNKv03qmfo51cO-xrmgT-lPIb02aj2/view?usp=sharing">VIDEO: Why use remote compute, creating a paperspace gradient instance and notebook, .bashrc, sym links, ctags, PATH manipulation, start to create shell script.</a></strong><br> 
 
 			<br>	
 			<strong>References</strong><br>
 				<strong><a href="https://course.fast.ai/">Fastai-Practical Deep Learning for Coders</a></strong>The next 2 weeks content derives from fastai<br/>
-				<!-- <strong><a href="https://www.youtube.com/watch?v=V3cN-bqFUh4&list=PLfYUBJiXbdtSLBPJ1GMx-sQWf6iNhb8mM&index=6"> VIDEO: Fastai code walkthru for creating a paperspace gradient instance</a> -->
+				<!-- <strong><a href="https://drive.google.com/file/d/1YMCNKv03qmfo51cO-xrmgT-lPIb02aj2/view?usp=sharing"> VIDEO: Why use remote compute, creating a paperspace gradient instance and notebook, .bashrc, sym links ctags start to create shell script.</a> --> -->
 
 				<strong><a href="https://www.paperspace.com/">Paperspace</a></strong> Fast, simple, scalable cloud computing for AI developers</strong><br/>
 				<strong><a href="https://linuxconfig.org/vim-tutorial">vim</a></strong> a powerful editor available on all unix installs</strong><br/>
