--- a/navbar/Lectures.html
+++ b/navbar/Lectures.html
@@ -54,12 +54,12 @@
  		
 				 <strong><a href="https://kperkins411.github.io/PCSE_595/content/Setting_up_cloud_machine.pdf"> 
 							INTRODUCTION: Why use, and how to set up a cloud based machine</a> </strong><br>
-				<strong><a href="https://drive.google.com/file/d/1YMCNKv03qmfo51cO-xrmgT-lPIb02aj2/view?usp=sharing">VIDEO: Why use remote compute, creating a paperspace gradient instance and notebook, .bashrc, sym links, ctags, PATH manipulation, start to create shell script.</a></strong><br> 
+				<strong><a href="https://www.youtube.com/playlist?list=PLYx5-uerKuRBgvglqXf_DRysyoekGAvxa">VIDEO: Set up Paperspace gradient instance - Part 1</a></strong> Why use remote compute, creating a paperspace gradient instance and notebook, .bashrc, sym links, ctags, PATH manipulation, start to create shell script.<br> 
 
 			<br>	
 			<strong>References</strong><br>
 				<strong><a href="https://course.fast.ai/">Fastai-Practical Deep Learning for Coders</a></strong>The next 2 weeks content derives from fastai<br/>
-				<!-- <strong><a href="https://drive.google.com/file/d/1YMCNKv03qmfo51cO-xrmgT-lPIb02aj2/view?usp=sharing"> VIDEO: Why use remote compute, creating a paperspace gradient instance and notebook, .bashrc, sym links ctags start to create shell script.</a> --> -->
+				<!-- <strong><a href="https://www.youtube.com/playlist?list=PLYx5-uerKuRBgvglqXf_DRysyoekGAvxa"></a> VIDEO: Why use remote compute, creating a paperspace gradient instance and notebook, .bashrc, sym links ctags start to create shell script.</a> -->
 
 				<strong><a href="https://www.paperspace.com/">Paperspace</a></strong> Fast, simple, scalable cloud computing for AI developers</strong><br/>
 				<strong><a href="https://linuxconfig.org/vim-tutorial">vim</a></strong> a powerful editor available on all unix installs</strong><br/>
