--- a/navbar/Lectures.html
+++ b/navbar/Lectures.html
@@ -53,8 +53,8 @@
 			<br><strong>Slides and Videos</strong><br>          
  		
 				 <strong><a href="https://kperkins411.github.io/PCSE_595/content/Setting_up_cloud_machine.pdf"> 
-							INTRODUCTION: Why use, and how to set up a cloud based machine</a> </strong><br>
-				<strong><a href="https://www.youtube.com/playlist?list=PLYx5-uerKuRBgvglqXf_DRysyoekGAvxa">VIDEO: Set up Paperspace gradient instance - Part 1</a></strong> Why use remote compute, creating a paperspace gradient instance and notebook, .bashrc, sym links, ctags, PATH manipulation, start to create shell script.<br> 
+							INTRODUCTION: Why use cloud based machine, general Paperspace Gradient information</a> </strong><br>
+				<strong><a href="https://www.youtube.com/playlist?list=PLYx5-uerKuRBgvglqXf_DRysyoekGAvxa">VIDEO: Set up Paperspace Gradient instance - Part 1</a></strong> Why use remote compute, creating a paperspace gradient instance and notebook, .bashrc, sym links, ctags, PATH manipulation, start to create shell script.<br> 
 
 			<br>	
 			<strong>References</strong><br>
