--- a/navbar/Lectures.html
+++ b/navbar/Lectures.html
@@ -54,7 +54,8 @@
  		
 				 <strong><a href="https://kperkins411.github.io/PCSE_595/content/Setting_up_cloud_machine.pdf"> 
 							INTRODUCTION: Why use cloud based machine, general Paperspace Gradient information</a> </strong><br>
-				<strong><a href="https://www.youtube.com/playlist?list=PLYx5-uerKuRBgvglqXf_DRysyoekGAvxa">VIDEO: Set up Paperspace Gradient instance - Part 1</a></strong> Why use remote compute, creating a paperspace gradient instance and notebook, .bashrc, sym links, ctags, PATH manipulation, start to create shell script.<br> 
+				<strong><a href="https://youtu.be/Fzlfv651osY">VIDEO: Set up Paperspace Gradient instance - Part 1</a></strong> Why use remote compute, creating a paperspace gradient instance and notebook, .bashrc, sym links, ctags, PATH manipulation, start to create setup.sh script.<br> 
+				<strong><a href="https://youtu.be/g8OXR423uWI">VIDEO: Set up Paperspace Gradient instance - Part 2</a></strong> Install and verify local python packages,  finishing setup.sh (a script to completely configure Paperspace gradient machine), debugging bash scripts, using vim, ctags and .vimrc to brose a codebase.<br> 
 
 			<br>	
 			<strong>References</strong><br>
