--- a/navbar/Lectures.html
+++ b/navbar/Lectures.html
@@ -76,12 +76,13 @@
 			<td class="style_white "><em>2</em></td>
 			<td class="style_white ">
 				<strong>Part 2: Effectively using a cloud based GPU instance for a Data Science competition.  </strong><br>Specifically to enter a Kaggle competition<br>
-<!--
+
 				<br><strong>Slides and Videos</strong><br>
 				<strong><a href="https://kperkins411.github.io/PCSE_595/content/content/Lectures/DeepLearningComputerVisionIntro.pdf"> INTRODUCTION: Deep Learning for Computer Vision</a> </a></strong><br>
-				<strong><a href="">VIDEO: EFFECTIVE CLOUD MACHINE INSTANCE USE WALKTHRU</a></strong> Entering a Kaggle image recognition datascience competition.  Setting up Kaggle cli, getting data, training models, submitting results, monitoring memory...
-				Watch this for how to compete in a Kaggle datascience competition</a></strong><br><br>
-
+<!--				<strong><a href="">VIDEO: Deep Learning Computer Vision Intro</a></strong> Deep Larning intro, back propagation intuitions, How to choose a model, fastai intro <br>
+				<strong><a href="">VIDEO: Kaggle competition entry</a></strong> Setting up Kaggle cli, getting data from Kaggle, choose then train a model, submitting results, monitoring memory
+				<br><br>
+-->
 			<strong>References</strong><br>
 			<strong><a href="https://www.kaggle.com/competitions/paddy-disease-classification">Paddy Doctor: Paddy Disease Classification</a></strong>Kaggle competition: Identify the type of disease present in paddy leaf images<br> 
 			<strong><a href="https://www.kaggle.com/code/jhoward/the-best-vision-models-for-fine-tuning">The best vision models for fine-tuning</a></strong> How to choose a model? This notebook compares many different models.  All are fine-tuned on two differnt datasets;  
@@ -95,10 +96,10 @@
 			Put this file in the ~/.kaggle directory on your machine, make sure its only readable by you (chmod 600 /root/.kaggle/kaggle.json)<br>
 			BTW you are probably going to use this again and again, its a good idea to put it in /storage/cfg then symlink it in setup.sh<br>
 			The CLI looks in this place for your key.<br>
--->				
+				
 	            </td>
 			<td class="style_white ">
-				<!-- <strong><a href="https://github.com/kperkins411/PCSE_595_code/blob/master/kaggle_paddy.ipynb">'Paddy Doctor: Paddy Disease Classification'</a></strong>Kaggle competition notebook, used to demo using a remote paperspace cloud GPU server.<br> -->
+				<strong><a href="https://github.com/kperkins411/PCSE_595_code/blob/master/kaggle_paddy.ipynb">'Paddy Doctor: Paddy Disease Classification'</a></strong>Kaggle competition notebook, used to demo using a remote paperspace cloud GPU server.<br>
 
 			</td>
 		</tr>
