--- a/navbar/Lectures.html
+++ b/navbar/Lectures.html
@@ -99,6 +99,8 @@
 				
 	            </td>
 			<td class="style_white ">
+				<strong><a href="https://github.com/kperkins411/PCSE_595_code/blob/master/Backpropdemo.ipynb">Backpropagation demo</a></strong>A very simple demo using 1 neuron and 1 error function. Also demonstrates what happens with a learning rate thats too high<br>
+				
 				<strong><a href="https://github.com/kperkins411/PCSE_595_code/blob/master/kaggle_paddy.ipynb">'Paddy Doctor: Paddy Disease Classification'</a></strong>Kaggle competition notebook, used to demo using a remote paperspace cloud GPU server.<br>
 
 			</td>
