--- a/navbar/Lectures.html
+++ b/navbar/Lectures.html
@@ -76,14 +76,12 @@
 			<td class="style_white "><em>2</em></td>
 			<td class="style_white ">
 				<strong>Part 2: Effectively using a cloud based GPU instance for a Data Science competition.  </strong><br>
-				Specifically to enter a Kaggle competition<br>
-
-				Note: I'll touch on back propagation, learning rate( consequences when too large or small), how to choose a timm vision model, how to fine tune this model, model training, model evaluation, submiting to a competition.  
-				I will also go over GPU monitoring using nvidia-smi, how to reclaim memory (gc and clearing torch cache).
+				Specifically to enter a Kaggle competition. I'll touch on back propagation, learning rate( consequences when too large or small), how to choose a timm vision model, how to fine tune this model, model training, model evaluation and submiting to a competition.  
+				I will also go over GPU monitoring using nvidia-smi, how to reclaim memory (gc and clearing torch cache), and other system monitoring techniques.<br>
 
 				<br><strong>Slides and Videos</strong><br>
 				<strong><a href="https://kperkins411.github.io/PCSE_595/content/content/DeepLearningComputerVisionIntro.pdf"> INTRODUCTION: Deep Learning for Computer Vision</a> </a></strong><br>
-				<strong><a href="https://youtu.be/1phvYIBK1RI">VIDEO: Deep Learning Computer Vision Intro</a></strong> Deep Learning intro, back propagation intuitions, How to choose a model, fastai intro,Kaggle competition into, Kaggle CLI, pulling data from Kaggle via CLI, setting up kaggle.json auth token <br> -->
+				<strong><a href="https://youtu.be/1phvYIBK1RI">VIDEO: Deep Learning Computer Vision Intro</a></strong> Deep Learning intro, back propagation intuitions, How to choose a model, fastai intro,Kaggle competition into, Kaggle CLI, pulling data from Kaggle via CLI, setting up kaggle.json auth token <br><br>
 <!--			<strong><a href="">VIDEO: Kaggle competition entry</a></strong>  Choose then train a model, submitting results, monitoring memory<br><br>
 -->
 			<strong>References</strong><br>
