--- a/navbar/Lectures.html
+++ b/navbar/Lectures.html
@@ -81,9 +81,9 @@
 
 				<br><strong>Slides and Videos</strong><br>
 				<strong><a href="https://kperkins411.github.io/PCSE_595/content/content/DeepLearningComputerVisionIntro.pdf"> INTRODUCTION: Deep Learning for Computer Vision</a> </a></strong><br>
-				<strong><a href="https://youtu.be/1phvYIBK1RI">VIDEO: Deep Learning Computer Vision Intro</a></strong> Deep Learning intro, back propagation intuitions, How to choose a model, fastai intro,Kaggle competition into, Kaggle CLI, pulling data from Kaggle via CLI, setting up kaggle.json auth token <br><br>
-<!--			<strong><a href="">VIDEO: Kaggle competition entry</a></strong>  Choose then train a model, submitting results, monitoring memory<br><br>
--->
+				<strong><a href="https://youtu.be/1phvYIBK1RI">VIDEO: Deep Learning Computer Vision Intro</a></strong> Deep Learning intro, back propagation intuitions, How to choose a model, fastai intro,Kaggle competition into, Kaggle CLI, pulling data from Kaggle via CLI, setting up kaggle.json auth token <br>
+				<strong><a href="https://youtu.be/sxJlNxyMC24">VIDEO: Kaggle competition entry</a></strong>  Using Fastai to train model (create DataLoader, create model, fine tune model, use model for inference (get_preds)).  Submit results to kaggle using CLI, how to get a better score using ensembling (and why it may not be worth the effort for real world problems). Monitoring GPU memory using nvidia-smi, using htop to monitor CPU.<br><br>
+
 			<strong>References</strong><br>
 			<strong><a href="https://www.kaggle.com/competitions/paddy-disease-classification">Paddy Doctor: Paddy Disease Classification</a></strong>Kaggle competition: Identify the type of disease present in paddy leaf images<br> 
 			<strong><a href="https://www.kaggle.com/code/jhoward/the-best-vision-models-for-fine-tuning">The best vision models for fine-tuning</a></strong> How to choose a model? This notebook compares many different models.  All are fine-tuned on two differnt datasets;  
